# pixelr

./: CMakeLists.txt  main.cpp  pixelizer.cpp  pixelizer.h  rlights.h  scene.cpp  scene.h
shaders/glsl330/: lighting.fs  lighting.vs  pixelizer.fs
styles/cyber/: cyber.rgs
